# gpu-monitor

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  servers.json.example
agent/: collector.py
app/: main.py
tests/: test_agent.py  test_dashboard.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: DiskRow.tsx  GpuBar.tsx  MetricRow.tsx  PageHeader.tsx  ServerCard.tsx  SkeletonCard.tsx  StatusBadge.tsx
