[project]
name = "gpu-monitor"
version = "0.2.0"
description = "Multi-server GPU health monitoring dashboard"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psutil>=6.0",
    "paramiko>=3.5",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "ruff>=0.8",
    "pytest>=8",
    "pytest-anyio>=0.25",
    "pytest-cov>=5",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.10"
pythonPlatform = "All"
include = ["agent", "app", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]

reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportMissingReturnType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["agent", "app", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
    # Project-specific: small monitoring scripts
    "D100",
    "D104",
    "EXE001",
    "PLR2004",
    "S607",
    "T201",
    "S507",
    "TRY003",
    "EM101",
    "EM102",
    "S104",     # dashboard intentionally binds to all interfaces
    "TC003",    # type-only imports are annotated with future annotations
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "PLR2004",
    "SLF001",
    "D",
]
"scripts/**/*.py" = [
    "T201",
    "INP001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "typer.Argument",
    "typer.Option",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["agent", "app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
